--- a/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
@@ -20,7 +20,10 @@
         <div class="col-md-6">
             <div class="form-group">
                 <a class="btn btn-primary" href="#formNuevo" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-               @* <button type="button" class="btn btn-primary" href="#formEditar" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>*@
+                @*<a class="btn btn-primary" data-toggle="modal" onclick="borrar()">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>*@
+                <a class="btn btn-primary" data-toggle="modal" onclick="redirigeRegalo()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Borrar<span class="glyphicon glyphicon-remove"></span></a>
+                @* <button type="button" class="btn btn-primary" href="#formEditar" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>*@
                 @*<a class="btn btn-primary" href="#eliminar" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>*@
                 <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>
             </div>
@@ -37,12 +40,13 @@
     @{
         var db = new WebApplication4.Models.inf245netsoft();
         List<WebApplication4.Models.Regalo> listaRegalo;
-        if (TempData["ListaR"] == null) { 
-        listaRegalo = db.Regalo.AsNoTracking().Where(c => c.estado == true).ToList();
+        if (TempData["ListaR"] == null)
+        {
+            listaRegalo = db.Regalo.AsNoTracking().Where(c => c.estado == true).ToList();
         }
         else
         {
-            listaRegalo = (List<WebApplication4.Models.Regalo>) TempData["ListaR"];
+            listaRegalo = (List<WebApplication4.Models.Regalo>)TempData["ListaR"];
         }
     }
 
@@ -54,7 +58,7 @@
                     <th>Nombre</th>
                     <th>Descripcion</th>
                     <th>Puntos</th>
-                    <th></th>
+                    @*<th></th>*@
                 </tr>
             </thead>
             <tbody id="tbody">
@@ -65,14 +69,97 @@
                         <td>@row.Nombre</td>
                         <td>@row.descripcion</td>
                         <td>@row.puntos</td>
-                        <td>@Html.ActionLink("Delete", "Delete", new { id = row.idRegalo})</td>
-                        <td>@Html.ActionLink("Edit", "Edit", new { id = row.idRegalo })</td>
+                        @*<td>@Html.ActionLink("Delete", "Delete2", new { id = row.idRegalo})</td>
+                            <td>@Html.ActionLink("Edit", "Edit2", new { id = row.idRegalo })</td>*@
                     </tr>
                 }
             </tbody>
         </table>
     </div>
 </div>
+
+<input type="hidden" id="idRegaloT" value="" />
+<script>
+    function myFunction(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            //element.item[0].cells[0].innerText;
+            element[0].className = "";
+        }
+        //var tabla = document.getElementById("mytable");
+        //alert(x);
+        //var y = x.getCells();
+        var elem = document.getElementById("idRegaloT");
+        elem.value = x.cells[0].innerHTML;
+        //alert(x.cells[0].innerHTML);
+        //ViewBag.P = x.cells[0].innerHTML;
+        x.className = "trselected";
+
+        //<a class="btn btn-primary" href="javascript:document.getElementsByClassName('trselected').submit()">Borrar<span class="glyphicon glyphicon-pencil"></span></a>
+        //idProm = x.codp;
+    }
+    function borrar() {
+        var regalo = $('#idRegaloT').val();
+        var el = document.getElementById(regalo);
+        var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        if (regalo != "" && regalo != null) {
+            $.ajax({
+                url: "@Url.Action("Delete","Regalo")",
+                data: { regalo: regalo },
+                success: function (data) {
+                    //alert("Eliminado");
+                    $('#eliminar').modal('hide');
+                    row.remove();
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        } else {
+            alert("Seleccione un Regalo");
+            evento = "";
+        }
+    }
+    function redirigeRegalo() {
+        var regalo = $('#idRegaloT').val();
+        if (regalo != "") {
+            window.location.href = '/Regalo/Edit?regalo=' + regalo;
+        } else {
+            alert("Seleccione un Regalo");
+            evento = "";
+        }
+        //$.post('/Regalo/Edit/' + regalo);
+    }
+    function modificar() {
+        var regalo = $('#idRegaloT').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Edit","Regalo")",
+            data: { regalo: regalo },
+            success: function (data) {
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function closewindow() {
+        $('#eliminar').modal('hide');
+    }
+</script>
+
+<style>
+    .trselected {
+        background: gray;
+    }
+</style>
 
 
 <div class="modal fade" id="formNuevo">
@@ -125,7 +212,7 @@
                         </div>
                     </div>
                 }
-            
+
             </div>
         </div>
     </div>
@@ -148,10 +235,11 @@
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" onclick="eliminar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
-                <button type="button" onclick="eliminar()" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
+                <button type="button" onclick="borrar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="return closewindow();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
 </div>
+
 
