Mantener Categoría Eventos - Delete Edit 50%

--- a/WebApplication4/WebApplication4/Views/Categoria/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Categoria/Index.cshtml
@@ -19,8 +19,8 @@
         <div class="col-md-11">
             <div class="form-group">
                 <a class="btn btn-primary" href="#formNuevo" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                <a class="btn btn-primary" onclick="editar()">Modificar <span class="glyphicon glyphicon-pencil"></span></a>
-                <a class="btn btn-primary" onclick="borrar()">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
+                <!--<a class="btn btn-primary" onclick="editar()">Modificar <span class="glyphicon glyphicon-pencil"></span></a>-->
+                <!--<a class="btn btn-primary" onclick="borrar()">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>-->
             </div>
         </div>
 
@@ -53,6 +53,7 @@
                     <th>Id Padre</th>
                     <th>Nivel</th>
                     <th>Estado</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
