--- a/WebApplication4/WebApplication4/Views/Regalo/_Search.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/_Search.cshtml
@@ -11,18 +11,19 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         <br>
-        <div class="row form-group">
-            @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @Html.EditorFor(model => model.nombre)
-                @Html.ValidationMessageFor(model => model.nombre)
-            </div>
-        </div>
+        <div class="col-md-10">
+            <form action="" class="" role="search">
+                <div class="form-group">
+                    <div class="input-group">
+                        @Html.EditorFor(model => model.nombre)
+                        @Html.ValidationMessageFor(model => model.nombre)
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Buscar" class="btn btn-primary" />
-            </div>
+                        <input type="submit" value="Buscar" class="btn btn-primary" />
+                    </div>
+
+                </div>
+
+            </form>
         </div>
     </div>
 }
