--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -11,6 +11,8 @@
 
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
+
 <div id="busqNombre" class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
@@ -19,14 +21,14 @@
     </div>
     <div class="col-md-5 col-md-offset-1">
 
-        @using (Html.BeginForm("Buscar", "Evento", FormMethod.Post, new { id = "search" }))
+        @using (Html.BeginForm("Busqueda", "Evento", FormMethod.Get, new { id = "search" }))
         {
 
             <div class="form-group">
                 <div class="input-group">
                     @Html.TextBox("busqueda", "", new { placeholder = "INGRESE EVENTO", @class = "form-control" })
                     @* <input id="textoBusqueda" type="text" class="form-control" placeholder="BUSCAR UN EVENTO">*@
-                    <span class="input-group-btn"><a id="btn-search" class="btn btn-primary" href="javascript:document.getElementById('search').submit()"><span class="glyphicon glyphicon-search"></span></a></span>
+                    <span class="input-group-btn"><a id="btn-search" class="btn btn-primary" onclick="submitSearch()"><span class="glyphicon glyphicon-search"></span></a></span>
                 </div>
             </div>
 
@@ -42,22 +44,23 @@
         <!--formulario EN LINEA-->
 
 
-        @using (Html.BeginForm("BusquedaAvanzada", "EventosPrueba", FormMethod.Post, new { id = "adv-search", @class = "form-inline" }))
+        @using (Html.BeginForm("Busqueda", "Evento", FormMethod.Get, new { id = "adv-search", @class = "form-inline" }))
         {
 
-            <div class="form-group ">
+            <div class="form-group">
                 <div class="form-group ">
                     <div class="input-group">
+
                         <span class="input-group-addon">Desde:</span>
-                        <input type="date" class="form-control">
+                        <input id="fech_ini" name="fech_ini" type="date" class="form-control">
                     </div>
                 </div>
 
 
-                <div class="form-group ">
-                    <div class="input-group">
+                <div class="form-group">
+                    <div class="input-group alert alert-danger">
                         <span class="input-group-addon">Hasta:</span>
-                        <input type="date" class="form-control">
+                        <input id="fech_fin" onchange="changeDate2()" name="fech_fin" type="date" class="form-control">
                     </div>
                 </div>
                 @*       @{
@@ -75,22 +78,22 @@
                 <div class="form-group ">
 
                     @Html.LabelFor(model => model.idCategoria)
-                    @Html.DropDownListFor(model => model.idCategoria, @ViewBag.categorias as SelectList, "Categorias", new { @class = "form-control", onclick= "cambioCat()" })
+                    @Html.DropDownListFor(model => model.idCategoria, @ViewBag.categorias as SelectList, "Categorias", new { @class = "form-control", onclick = "cambioCat()" })
 
 
 
 
                     @*
-    <select name="" id="Tipo" class="form-control col-lg-2">
-        <option value="" disabled selected hidden>Tipo</option>
+                        <select name="" id="Tipo" class="form-control col-lg-2">
+                            <option value="" disabled selected hidden>Tipo</option>
 
 
-        @foreach (var categoria in ViewBag.categorias)
-        {
-            <option value=""> @categoria.nombre</option>
-        }
+                            @foreach (var categoria in ViewBag.categorias)
+                            {
+                                <option value=""> @categoria.nombre</option>
+                            }
 
-    </select>
+                        </select>
 
                     *@
                 </div>
@@ -109,33 +112,33 @@
 
                     @*
 
-    @{
-        var region = new SelectList(ViewBag.departamentos, "idRegion", "nombre");
-    }
+                        @{
+                            var region = new SelectList(ViewBag.departamentos, "idRegion", "nombre");
+                        }
 
 
-    @Html.DropDownList("departamentos", region, "--Dpto--", new { @class = "form-control", onchange = "cambio()" })
+                        @Html.DropDownList("departamentos", region, "--Dpto--", new { @class = "form-control", onchange = "cambio()" })
                     *@
                 </div>
                 <div class="form-group">
 
                     @Html.LabelFor(model => model.idProv)
                     @Html.DropDownListFor(model => model.idProv, @ViewBag.distritos as SelectList, "Distrito", new { @class = "form-control" })
-@*
-    <select name="distritos" id="distritos" class="form-control ">
-        <option value="" disabled hidden>-Dist-</option>
-    </select>
+                    @*
+                        <select name="distritos" id="distritos" class="form-control ">
+                            <option value="" disabled hidden>-Dist-</option>
+                        </select>
 
-*@
+                    *@
 
                 </div>
                 <div class="form-group">
-                    <a href="buscar-evento(vendedor).html" class="btn btn-primary ">Buscar <span class="glyphicon glyphicon-search"></span></a>
+                    <a id="btn-adv-search" onclick="submitAdvSearch() " class="btn btn-primary ">Buscar <span class="glyphicon glyphicon-search"></span></a>
                 </div>
 
             </div>
 
-                        }
+        }
 
     </div>
 </div>
@@ -294,9 +297,49 @@
 </div>
 <script>
 
+    $(document).ready(function () {
+        $.validator.addMethod("greaterThan", function (value, element, params) {
+
+            console.log(element);
+            console.log(value);
+            console.log(params);
+
+               if (!/Invalid|NaN/.test(new Date(value))) {
+                   return new Date(value) > new Date($(params).val());
+               }
+
+               return isNaN(value) && isNaN($(params).val()) || (Number(value) > Number($(params).val()));
+           }, 'Must be greater than {0}.');
+
+    });
+
+
+    function submitSearch() {
+
+
+        $("#search").submit();
+    }
+
+    function changeDate2() {
+
+
+
+        $("#fech_fin").rules('add',{ greaterThan: "#fech_ini"})
+
+
+
+
+    }
+
+
+    function submitAdvSearch() {
+
+        $("#adv-search").submit();
+    }
+
     function cambio() {
 
-        fillCombo("idProv", $("#idRegion").val(),"Provincia");
+        fillCombo("idProv", $("#idRegion").val(),"Provincia","Distritos");
 
     }
 
@@ -304,15 +347,15 @@
     function cambioCat() {
 
 
-        fillCombo("idSubCat", $("#idCategoria").val(),"Subcategorias");
+        fillCombo("idSubCat", $("#idCategoria").val(),"Subcategorias","Subcategorias");
     }
 
-    function fillCombo(idCombo, value, linkUrl) {
+    function fillCombo(idCombo, value, linkUrl, optlabel) {
 
         $("#" + idCombo).empty();
-        $("#" + idCombo).append("<option val=''>-Dist-</option>")
+        $("#" + idCombo).append("<option value=''>"+ optlabel + "</option>")
 
-       
+
         var depId = parseInt(value);
         if (isNaN(depId)) return;
                 $.ajax({
@@ -322,7 +365,7 @@
                     success: function (data) {
                         var obj = $.parseJSON(data);
                         $.each(obj, function (k, v) {
-                            $("#" + idCombo).append("<option val='" + v.IdRegion + "'>" + v.Nombre + "</option>");
+                            $("#" + idCombo).append("<option value='" + v.IdRegion + "'>" + v.Nombre + "</option>");
                         });
                     },
                     error: function () {
