--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Edit.cshtml
@@ -5,12 +5,16 @@
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    PuntoVenta punto = (PuntoVenta)Session["punto"];
+    PuntoVentaModel puntoM = new PuntoVentaModel();
+    puntoM.mac = punto.dirMAC;
+    puntoM.ubicacion = punto.ubicacion;
 }
 
 
 
 <div class="modal-body">
-    @using (Html.BeginForm("EditRegister", "PuntoVenta", FormMethod.Post, new { }))
+    @using (Html.BeginForm("EditRegister", "PuntoVenta", FormMethod.Post, new { model = puntoM }))
     {
         @Html.AntiForgeryToken()
 
@@ -20,7 +24,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.ubicacion, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.ubicacion)
+                    @Html.TextBoxFor(model => model.ubicacion, new { @placeholder = @puntoM.ubicacion})
                     @Html.ValidationMessageFor(model => model.ubicacion)
                 </div>
             </div>
@@ -28,7 +32,7 @@
             <div class="row form-group">
                 @Html.LabelFor(model => model.mac, new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.mac)
+                    @Html.TextBoxFor(model => model.mac, new { @placeholder = @puntoM.mac })
                     @Html.ValidationMessageFor(model => model.mac)
                 </div>
             </div>
