--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Index.cshtml
@@ -20,49 +20,48 @@
         <div class="col-md-6">
             <div class="form-group">
                 <a class="btn btn-primary" href="#formNuevo" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                <button type="button" class="btn btn-primary" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>
-                <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
-                <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar Cambios <span class="glyphicon glyphicon-save"></span></button>
+                <a class="btn btn-primary" data-toggle="modal" onclick="redirige()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Borrar<span class="glyphicon glyphicon-remove"></span></a>
             </div>
         </div>
 
-        @*<div class="col-md-3">
+        <div class="col-md-3">
             <form action="" class="" role="search">
                 <div class="form-group">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="NOMBRE DEL PTO DE VENTA">
-                        <span class="input-group-btn"><button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
+                        <input id="idBusq" type="text" class="form-control" placeholder="NOMBRE DEL PTO VENTA">
+                        <span class="input-group-btn"><button onclick="busca()" class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
                     </div>
                 </div>
             </form>
         </div>
-        <div class="col-md-2">
-            <select class="form-control" name="" id="">
-                <option value="">Región</option>
-                <option value="">Lima</option>
-                <option value="">Ica</option>
-            </select>
+        @*<div class="col-md-2">
+        <select class="form-control" name="" id="">
+            <option value="">Región</option>
+            <option value="">Lima</option>
+            <option value="">Ica</option>
+        </select>
 
-        </div>*@
+    </div>*@
 
         <div class="col-md-1">
             <a class="btn btn-danger pull-right" href="@Url.Action("Index2", "Home")">Salir <span class="glyphicon glyphicon-log-out"></span></a>
         </div>
 
     </div>
-    @{
+    @*@{
         Html.RenderPartial("_Search");
-    }
+    }*@
     @{
         var db = new WebApplication4.Models.inf245netsoft();
         List<WebApplication4.Models.PuntoVenta> listaPunto = db.PuntoVenta.AsNoTracking().Where(c => c.estaActivo == true).ToList();
-        if (TempData["ListaP"] == null)
+        if (Session["ListaP"] == null)
         {
             listaPunto = db.PuntoVenta.AsNoTracking().Where(c => c.estaActivo == true).ToList();
         }
         else
         {
-            listaPunto = (List<WebApplication4.Models.PuntoVenta>)TempData["ListaP"];
+            listaPunto = (List<WebApplication4.Models.PuntoVenta>)Session["ListaP"];
         } 
          }
 
@@ -73,7 +72,7 @@
                     <th>Id</th>
                     <th>Ubicacion</th>
                     <th>Dirección MAC</th>
-                    <th></th>
+                    @*<th></th>*@
                 </tr>
             </thead>
             <tbody id="tbody">
@@ -83,8 +82,8 @@
                         <td>@row.codPuntoVenta</td>
                         <td>@row.ubicacion</td>
                         <td>@row.dirMAC</td>
-                        <td>@Html.ActionLink("Delete", "Delete", new { id = row.codPuntoVenta })</td>
-                        <td>@Html.ActionLink("Edit", "Edit", new { id = row.codPuntoVenta })</td>
+                        @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.codPuntoVenta })</td>
+                        <td>@Html.ActionLink("Edit", "Edit", new { id = row.codPuntoVenta })</td>*@
                     </tr>
                 }
             </tbody>
@@ -94,6 +93,92 @@
 
 
 </div>
+
+
+<input type="hidden" id="idPuntoT" value="" />
+<script>
+    function myFunction(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            //element.item[0].cells[0].innerText;
+            element[0].className = "";
+        }
+        //var tabla = document.getElementById("mytable");
+        //alert(x);
+        //var y = x.getCells();
+        var elem = document.getElementById("idPuntoT");
+        elem.value = x.cells[0].innerHTML;
+        //alert(x.cells[0].innerHTML);
+        //ViewBag.P = x.cells[0].innerHTML;
+        x.className = "trselected";
+
+        //<a class="btn btn-primary" href="javascript:document.getElementsByClassName('trselected').submit()">Borrar<span class="glyphicon glyphicon-pencil"></span></a>
+        //idProm = x.codp;
+    }
+    function borrar() {
+        var punto = $('#idPuntoT').val();
+        var el = document.getElementById(punto);
+        var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        if (punto != "" && punto != null) {
+            $.ajax({
+                url: "@Url.Action("Delete","PuntoVenta")",
+                data: { punto: punto },
+                success: function (data) {
+                    //alert("Eliminado");
+                    $('#eliminar').modal('hide');
+                    row.remove();
+                    window.location.href = '/PuntoVenta/Index';
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        } else {
+            alert("Seleccione un Punto de Venta");
+            evento = "";
+        }
+    }
+    function redirige() {
+        var punto = $('#idPuntoT').val();
+        if (punto != "") {
+            window.location.href = '/PuntoVenta/Edit?punto=' + punto;
+        } else {
+            alert("Seleccione un Punto de Venta");
+            evento = "";
+        }
+        //$.post('/Regalo/Edit/' + regalo);
+    }
+    function busca() {
+        var punto = $('#idBusq').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Search2", "PuntoVenta")",
+            data: { punto: punto },
+            success: function (data) {
+                window.location.href = '/PuntoVenta/Index';
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function closewindow() {
+        $('#eliminar').modal('hide');
+    }
+</script>
+
+<style>
+    .trselected {
+        background: gray;
+    }
+</style>
 
 
 <div class="modal fade" id="formNuevo">
@@ -162,7 +247,8 @@
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" onclick="eliminar()" class="btn btn-primary">Si <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="borrar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="return closewindow();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
