--- a/WebApplication4/WebApplication4/Views/Local/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Index.cshtml
@@ -20,24 +20,23 @@
         <div class="col-md-6">
             <div class="form-group">
                 <a class="btn btn-primary" href="#formNuevo" data-toggle="modal">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
-                @*<button type="button" class="btn btn-primary" onclick="modificar()">Modificar <span class="glyphicon glyphicon-pencil"></span></button>
-                <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a>
-                <button id=botonOculto style="visibility:hidden" type="button" class="btn btn-primary" onclick="msjConfirmacion2()">Guardar cambios <span class="glyphicon glyphicon-save"></span></button>*@
+                <a class="btn btn-primary" data-toggle="modal" onclick="redirige()">Modificar<span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-primary" href="#eliminar" data-toggle="modal">Borrar<span class="glyphicon glyphicon-remove"></span></a>
             </div>
         </div>
 
-        @*<div class="col-md-3">
+        <div class="col-md-3">
             <form action="" class="" role="search">
                 <div class="form-group">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="BUSCAR UN LOCAL">
-                        <span class="input-group-btn"><button class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
+                        <input id="idBusq" type="text" class="form-control" placeholder="NOMBRE DEL LOCAL">
+                        <span class="input-group-btn"><button onclick="busca()" class="btn btn-primary" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
                     </div>
                 </div>
             </form>
         </div>
-        <div class="col-md-2">
-            <select class="form-control" name="" id="">
+        @*<div class="col-md-2">
+            <select class="form-control" name="" id="comboBusq" onchange="">
                 <option value="">Región</option>
                 <option value="">Lima</option>
                 <option value="">Ica</option>
@@ -51,19 +50,19 @@
 
     </div>
 
-    @{
+    @*@{
         Html.RenderPartial("_Search");
-    }
+    }*@
     @{
         var db = new WebApplication4.Models.inf245netsoft();
         List<WebApplication4.Models.Local> listaLocal ;
-        if (TempData["ListaL"] == null)
+        if (Session["ListaL"] == null)
         {
             listaLocal = db.Local.ToList();
         }
         else
         {
-            listaLocal = (List<WebApplication4.Models.Local>)TempData["ListaL"];
+            listaLocal = (List<WebApplication4.Models.Local>)Session["ListaL"];
         }
     }
 
@@ -77,8 +76,8 @@
                     <th>Aforo</th>
                     <th>Provincia</th>
                     <th>Departamento</th>
-                    <th></th>
-                    <th></th>
+                    @*<th></th>
+                    <th></th>*@
                 </tr>
             </thead>
             <tbody id="tbody">
@@ -92,8 +91,8 @@
                         <td>@db.Region.Find(row.idProvincia).nombre</td>
                         <td>@db.Region.Find(row.idRegion).nombre</td>
                         @*<td>@Html.ActionLink("Delete", "Delete", new { id = row.codLocal })</td>*@
-                        <td><a href="@Url.Action("Edit", "Local", new { id = row.codLocal })" class="btn btn-primary">Modificar <span class="glyphicon glyphicon-pencil"></span></a></td>
-                        <td><a href="@Url.Action("Delete", "Local", new { id = row.codLocal })" class="btn btn-primary">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a></td>
+                        @*<td><a href="@Url.Action("Edit", "Local", new { id = row.codLocal })" class="btn btn-primary">Modificar <span class="glyphicon glyphicon-pencil"></span></a></td>
+                        <td><a href="@Url.Action("Delete", "Local", new { id = row.codLocal })" class="btn btn-primary">Dar de Baja <span class="glyphicon glyphicon-remove"></span></a></td>*@
                     </tr>
                 }
             </tbody>
@@ -212,6 +211,91 @@
     </div>
 </div>
 
+<input type="hidden" id="idLocalT" value="" />
+<script>
+    function myFunction(x) {
+        if (document.getElementsByClassName("trselected").length > 0) {
+            var element = document.getElementsByClassName("trselected");
+            //element.item[0].cells[0].innerText;
+            element[0].className = "";
+        }
+        //var tabla = document.getElementById("mytable");
+        //alert(x);
+        //var y = x.getCells();
+        var elem = document.getElementById("idLocalT");
+        elem.value = x.cells[0].innerHTML;
+        //alert(x.cells[0].innerHTML);
+        //ViewBag.P = x.cells[0].innerHTML;
+        x.className = "trselected";
+
+        //<a class="btn btn-primary" href="javascript:document.getElementsByClassName('trselected').submit()">Borrar<span class="glyphicon glyphicon-pencil"></span></a>
+        //idProm = x.codp;
+    }
+    function borrar() {
+        var local = $('#idLocalT').val();
+        var el = document.getElementById(local);
+        var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        if (local != "" && local != null) {
+            $.ajax({
+                url: "@Url.Action("Delete","Local")",
+                data: { local: local },
+                success: function (data) {
+                    //alert("Eliminado");
+                    $('#eliminar').modal('hide');
+                    row.remove();
+                    window.location.href = '/Local/Index';
+                },
+                error: function () {
+                    alert("Error :(");
+                }
+            });
+        } else {
+            alert("Seleccione un Local");
+            evento = "";
+        }
+    }
+    function redirige() {
+        var local = $('#idLocalT').val();
+        if (local != "") {
+            window.location.href = '/Local/Edit?local=' + local;
+        } else {
+            alert("Seleccione un Local");
+            evento = "";
+        }
+        //$.post('/Regalo/Edit/' + regalo);
+    }
+    function busca() {
+        var local = $('#idBusq').val();
+        //var el = document.getElementById(regalo);
+        //var row = $(el).closest('tr');
+        //alert(evento);
+        //alert(promocion);
+        $.ajax({
+            url: "@Url.Action("Search2", "Local")",
+            data: { local: local },
+            success: function (data) {
+                window.location.href = '/Local/Index';
+                //alert("Eliminado");
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    function closewindow() {
+        $('#eliminar').modal('hide');
+    }
+</script>
+
+<style>
+    .trselected {
+        background: gray;
+    }
+</style>
+
 <div class="modal fade" id="eliminar">
     <!--esta div pondra la pantalla oscura al presionar el boton-->
     <div class="modal-dialog">
@@ -228,10 +312,9 @@
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" onclick="eliminar()" class="btn btn-primary">Si <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="borrar()" class="btn btn-primary">Aceptar <span class="glyphicon glyphicon-ok"></span></button>
+                <button type="button" onclick="return closewindow();" class="btn btn-danger">Cancelar <span class="glyphicon glyphicon-remove"></span></button>
             </div>
         </div>
     </div>
 </div>
-
-
